--- a/styles/style.css
+++ b/styles/style.css
@@ -27,5 +27,30 @@
 /* JOUW STYLING */
 /****************/
 
-/* jouw code */
+body {
+}
+
+header nav {
+}
+
+header nav button {
+}
+
+main {
+}
+
+main img {
+}
+
+details {
+}
+
+button {
+}
+
+button[disabled] {
+}
+
+footer {
+}
 
