--- a/styles/style.css
+++ b/styles/style.css
@@ -1,64 +1,321 @@
 /**************/
 /* CSS REMEDY */
 /**************/
-*,
-*::after,
-*::before {
+* {
   box-sizing: border-box;
+  margin: 0;
+  font-family: "Plus Jakarta Sans", sans-serif;
+  letter-spacing: 0.030em;
+  text-decoration: none;
+  list-style: none;
+}
+
+.hidden {
+  display: none;
 }
 
 /*********************/
 /* CUSTOM PROPERTIES */
 /*********************/
+
 :root {
-  /* startje */
-  --color-text: #111;
-  --color-background: #eee;
+  --background-color: #eee;
+  --link-color: #2c2a29;
+  --text-color: #2c2a29;
 }
 
 /****************/
 /* JOUW STYLING */
 /****************/
 
-body {
-}
-
-header nav {
-}
-
-header nav button {
-}
-
-main {
-}
-
-main img {
-}
-
-details {
-}
+/****************************/
+/* Basis/algemene elementen */
+/****************************/
 
 button {
+  border: none;
+  background-color: white;
 }
 
-button[disabled] {
+hr {
+  border: #e5e5e5 solid 0.5px;
+  margin-top: 1.8rem;
+  margin-bottom: 1.8rem;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
+/*************/
+/* HEADER */
+/************/
+
+header img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+
+header p {
+  background-color: #f5f5f5;
+  padding-top: 0.55rem;
+  padding-bottom: 0.65rem;
+  text-align: center;
+  line-height: 1.1rem;
+  color: var(--text-color);
+  font-weight: 300;
+  font-size: 0.8rem;
+}
+
+/* Navigatie */
+.logo img {
+  padding-top: 0.9em;
+  padding-bottom: 0.4em;
+  padding-left: 2.25em;
+  padding-right: 1.25em;
+}
+
+/*************/
+/* MAIN */
+/************/
+
+/* Section 1 */
+.section1 {
+  background-color: #CCE3E2;
+}
+
+.section1 img {
+  width: 100%;
+  height: 42rem;
+  max-height: 380px;
+  object-fit: cover;
+}
+
+.section-one-text {
+  text-align: center;
+  padding: 1.8rem;
+}
+
+.section-one-text h2 {
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: var(--text-color);
+  line-height: 1.7rem;
+  margin-bottom: 1.5rem;
+}
+
+.section-one-text p {
+  font-weight: 400;
+  font-size: 0.9rem;
+  line-height: 1.5rem;
+  margin-bottom: 1.5rem;
+  color: var(--text-color);
+}
+
+.section-one-text a {
+  display: block;
+  font-size: 0.9rem;
+  color: var(--link-color);
+  border: 1px solid #000000;
+  padding: 0.5rem 1rem;
+}
+
+/* Section 2 - Carrousel */
+.carrousel {
+  position: relative;
+}
+
+.carrousel ul {
+  display: flex;
+  gap: 1.1rem;
+  overflow-x: hidden;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  width: 100%;
+}
+
+.carrousel li {
+  flex: 0 0 53%;
+  box-sizing: border-box;
+  scroll-snap-align: start;
+  margin: 0;
+}
+
+.carrousel li:nth-child(3),
+.carrousel li:nth-child(5) {
+  margin-left: 3rem;
+}
+
+
+.carrousel li:nth-child(6) {
+  margin-right: 3rem;
+}
+
+.carrousel img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+
+.carrouseltext {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: space-between;
+  min-height: 6.6rem;
+  padding: 0.45rem;
+}
+
+.carrousel h2 {
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: var(--text-color);
+  line-height: 1.3rem;
+}
+
+.carrousel p {
+  font-size: 0.85rem;
+  font-weight: 300;
+  color: var(--text-color);
+  line-height: 1.3rem;
+  padding: 0.45rem;
+}
+
+/* Carrousel knoppen */
+#last,
+#next {
+  position: absolute;
+  font-size: 1.8rem;
+  padding: 3px 5px;
+  cursor: pointer;
+  z-index: 10;
+  top: 48%;
+  transform: translateY(-50%);
+  background: white;
+  border: none;
+}
+
+#last {
+  left: 0.25rem;
+}
+
+#next {
+  right: 0.25rem;
+}
+
+/* Section 3 */
+.section3 {
+  display: grid;
+  align-items: center;
+  margin-top: 5rem;
+  padding-left: 1em;
+  padding-right: 1em;
+  column-gap: 1rem;
+}
+
+.section3 a {
+  margin-bottom: 1.4em;
+  padding-top: 0.9em;
+  padding-bottom: 0.9em;
+  text-align: center;
+  color: var(--link-color);
+  text-decoration-line: underline;
+  text-underline-offset: 7px;
+  font-size: 0.85rem;
+  line-height: 1.2rem;
+  font-weight: 300;
+}
+
+.section3 img {
+  display: block;
+  width: 100%;
+  max-height: auto;
+}
+
+/*************/
+/* Article */
+/************/
+
+.article1 {
+  background-color: whitesmoke;
+}
+
+.article1 img {
+  height: 100%;
+  width: 100%;
+}
+
+.article1-text {
+  display: flex;
+  padding: 1.5rem;
+  flex-direction: column;
+}
+
+.article1-text h2 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: var(--color-text);
+  line-height: 1.7rem;
+  margin-bottom: 0.9rem;
+}
+
+.article1-text p {
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.5rem;
+  color: var(--color-text);
+}
+
+/*************/
+/* FOOTER */
+/*************/
 
 footer {
+  background-color: #33cee5;
+  column-gap: 1,5rem;
+  padding: 2rem;
 }
 
-/* bron: https://medium.com/web-dev-survey-from-kyoto/the-visually-hidden-technique-303f8e2bd409 */
-.visually-hidden {
-  /* Contain text within 1px box */
-  height: 1px;
-  overflow: hidden;
-  width: 1px;
-  /* Keep the layout */
-  position: absolute;
-  /* Remove any visible trace (e.g. background color) */
-  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  clip-path: inset(50%); /* browsers in the future */
-  /* Prevent the screen reader to skip spaces between words */
-  white-space: nowrap;
+footer h3 {
+  margin-bottom: 0.5em;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+footer a {
+  font-weight: 300;
+  font-size: 0.9rem;
+  line-height: 1.5rem;
+  color: var(--link-color);
+}
+
+footer li {
+  margin-bottom: 0.8em;
+}
+
+footer section {
+  margin-left: 2rem;
+}
+
+footer ul {
+  padding: 0;
+}
+
+footer select {
+  font-size: 0.9rem;
+  font-weight: 300;
+  margin-top: 1.5em;
+  padding: 0.4rem;
+  border: none;
 }
